[package]
name = "tca8418"
version = "0.1.1"
edition = "2024"
authors = ["Lars Bollmann"]
description = "Platform-agnostic Rust driver for the TCA8418 I²C keypad scan IC"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "tca8418", "keypad", "i2c", "no_std"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
embedded-hal = "1.0"
