[package]
name = "tca8418"
version = "0.2.2"
edition = "2024"
authors = ["Lars Bollmann"]
description = "Platform-agnostic Rust driver for the TCA8418 I²C keypad scan IC"
license = "MIT OR Apache-2.0"
keywords = ["embedded-hal-driver", "tca8418", "keypad", "i2c", "no_std"]
categories = ["embedded", "no-std", "hardware-support"]
repository = "https://github.com/LarsBollmann/tca8418"

[dependencies]
embedded-hal = "1.0"
defmt = { version = "1.0.1", optional = true }

[features]
## Enable optional support for defmt
defmt = ["dep:defmt"]